add additional cases, fix a few bugs, clean up, allow invalid surrogate pairs with replacement chars, start writing up official grammar and spec